Traded the id name that is conflicting with another one

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="containers">
             <div id="tarefas">
                 <div id="inputs">
-                    <label for="tarefa">Tarefa:</label>
+                    <label for="tarefa" id="tarefaTitle">Tarefa:</label>
                     <input type="text" id="tarefa" name="tarefa">
                     <button id="adicionarTarefa">Adicionar</button>
                 </div>
