Traded the id button and add a breakline to the button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div id="tarefas">
                 <div id="inputs">
                     <label for="tarefa" id="tarefaTitle">Tarefa:</label>
-                    <input type="text" id="tarefa" name="tarefa">
-                    <button id="adicionarTarefa">Adicionar</button>
+                    <input type="text" id="tarefa" name="tarefa"><br>
+                    <button id="botaoAdicionarTarefa">Adicionar</button>
                 </div>
                 <ul id="listaTarefas"></ul>
             </div>
